Add widget_fade_timer to engine_settings

--- a/StatusForge.io/Config_Template.json
+++ b/StatusForge.io/Config_Template.json
@@ -11,6 +11,8 @@
         "scan_interval": 5,
         "widget_poll_rate": 3,
         "safe_mode": false,
-        "auto_push": false
+        "auto_push": false,
+        "widget_fade_timer": 15
     }
+
 }
